Fixprojects viewing on small screen laptops

--- a/src/scss/modules/media.scss
+++ b/src/scss/modules/media.scss
@@ -38,7 +38,7 @@
 .projects {
 
     &__list {
-        margin: 0 24px;
+        margin: 0 18px;
     }
 }
 .project {
@@ -382,11 +382,11 @@
 
         &--left {
             width: 82px;
-            margin-left: 10px;
+            margin-left: 18px;
         }
 
         &--right {
-            width: 170px;
+            width: 160px;
         }
     }
     .name {
